--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -203,7 +203,7 @@ if (ACCELERATESPARSE AND AccelerateSparse_FOUND)
 endif()
 
 if (LAPACK_FOUND)
-  list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES ${LAPACK_LIBRARIES})
+  list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES lapack)
 endif ()
 
 set(CERES_LIBRARY_SOURCE
