hunter: prefer CXSparse from SuiteSparse
Change-Id: Ida86cab015cd0e55a46f06645c2cc44e5df9a431

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -326,7 +326,48 @@ else (SUITESPARSE)
 endif (SUITESPARSE)
 
 # CXSparse.
-if (CXSPARSE)
+if (CXSPARSE AND TARGET SuiteSparse::cxsparse)
+  # use suitesparse provided cxsparse target
+  # Extract CXSparse version from cs.h
+  set(CXSPARSE_INCLUDE_DIR "${SuiteSparse_INCLUDE_DIRS}/suitesparse")
+  if (CXSPARSE_INCLUDE_DIR)
+    set(CXSPARSE_VERSION_FILE ${CXSPARSE_INCLUDE_DIR}/cs.h)
+    if (NOT EXISTS ${CXSPARSE_VERSION_FILE})
+      message(
+        "Could not find file: ${CXSPARSE_VERSION_FILE} "
+        "containing version information in CXSparse install located at: "
+        "${CXSPARSE_INCLUDE_DIR}.")
+    else (NOT EXISTS ${CXSPARSE_VERSION_FILE})
+      file(READ ${CXSPARSE_INCLUDE_DIR}/cs.h CXSPARSE_VERSION_FILE_CONTENTS)
+
+      string(REGEX MATCH "#define CS_VER [0-9]+"
+        CXSPARSE_MAIN_VERSION "${CXSPARSE_VERSION_FILE_CONTENTS}")
+      string(REGEX REPLACE "#define CS_VER ([0-9]+)" "\\1"
+        CXSPARSE_MAIN_VERSION "${CXSPARSE_MAIN_VERSION}")
+
+      string(REGEX MATCH "#define CS_SUBVER [0-9]+"
+        CXSPARSE_SUB_VERSION "${CXSPARSE_VERSION_FILE_CONTENTS}")
+      string(REGEX REPLACE "#define CS_SUBVER ([0-9]+)" "\\1"
+        CXSPARSE_SUB_VERSION "${CXSPARSE_SUB_VERSION}")
+
+      string(REGEX MATCH "#define CS_SUBSUB [0-9]+"
+        CXSPARSE_SUBSUB_VERSION "${CXSPARSE_VERSION_FILE_CONTENTS}")
+      string(REGEX REPLACE "#define CS_SUBSUB ([0-9]+)" "\\1"
+        CXSPARSE_SUBSUB_VERSION "${CXSPARSE_SUBSUB_VERSION}")
+
+      # This is on a single line s/t CMake does not interpret it as a list of
+      # elements and insert ';' separators which would result in 3.;1.;2 nonsense.
+      set(CXSPARSE_VERSION "${CXSPARSE_MAIN_VERSION}.${CXSPARSE_SUB_VERSION}.${CXSPARSE_SUBSUB_VERSION}")
+    endif (NOT EXISTS ${CXSPARSE_VERSION_FILE})
+  endif (CXSPARSE_INCLUDE_DIR)
+  if (NOT CXSPARSE_VERSION)
+    set(CXSPARSE_VERSION ${SuiteSparse_VERSION})
+  endif()
+  set(CXSPARSE_LIBRARIES SuiteSparse::cxsparse)
+  set(CXSPARSE_FOUND TRUE)
+  message("-- Using target SuiteSparse::cxsparse with version: ${CXSPARSE_VERSION}, "
+    "building with CXSparse.")
+elseif (CXSPARSE)
   # Don't search with REQUIRED as we can continue without CXSparse.
   find_package(CXSparse)
   if (CXSPARSE_FOUND)
@@ -349,7 +390,7 @@ else (CXSPARSE)
   # CXSPARSE instead of setting them.
   mark_as_advanced(FORCE CXSPARSE_INCLUDE_DIR
                          CXSPARSE_LIBRARY)
-endif (CXSPARSE)
+endif ()
 
 if (ACCELERATESPARSE)
   find_package(AccelerateSparse)
