cmake: add ceres python bindings in CMake
Change-Id: I4f190500390ead17bbb8f29ab7a42a81a70799b8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -802,3 +802,5 @@ if (EXPORT_BUILD_DIR)
     "${Ceres_BINARY_DIR}/CeresConfig.cmake" @ONLY)
 
 endif (EXPORT_BUILD_DIR)
+
+include(ceres_python_bindings/AddToCeres.cmake)
