hunter: add package LAPACK
- add LAPACK hunter package
- use CONFIG file for LAPACK, use lapack target
- LAPACK requires Fortran for examples

Change-Id: Ibe71c244f5cedec3d88791263f362e764ebdc567

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,6 +28,14 @@
 #
 # Author: keir@google.com (Keir Mierle)
 
+if (HUNTER_ENABLED AND LAPACK)
+  # When building ceres-solver with Hunter and LAPACK then LAPACK is built
+  # with a Fortran compiler and statically linked to the ceres library.
+  # Therefore every client application using ceres needs to satisfy the
+  # Fortran dependencies. This is done here by enabling the Fortran language.
+  enable_language(Fortran)
+endif()
+
 add_executable(helloworld helloworld.cc)
 target_link_libraries(helloworld PRIVATE Ceres::ceres)
 
