--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,9 +277,12 @@ if (NOT USE_CUDA)
 endif (NOT USE_CUDA)
 
 if (LAPACK)
-  find_package(LAPACK QUIET)
+  hunter_add_package(LAPACK)
+  find_package(LAPACK CONFIG QUIET)
   if (LAPACK_FOUND)
-    message("-- Found LAPACK library: ${LAPACK_LIBRARIES}")
+    get_target_property(lapack_location lapack LOCATION)
+    set(LAPACK_LIBRARIES lapack)
+    message("-- Found LAPACK library: ${lapack_location}")
   else (LAPACK_FOUND)
     message("-- Did not find LAPACK library, disabling LAPACK support.")
     update_cache_variable(LAPACK OFF)
