--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -116,8 +116,14 @@ endif (NOT MINIGLOG AND GLOG_FOUND)
 if (SUITESPARSE AND SuiteSparse_FOUND)
   # Define version information for use in Solver::FullReport.
   add_definitions(-DCERES_SUITESPARSE_VERSION="${SuiteSparse_VERSION}")
-  list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES SuiteSparse::CHOLMOD
-    SuiteSparse::SPQR)
+  list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES
+    SuiteSparse::spqr
+    SuiteSparse::cholmod
+    SuiteSparse::ccolamd
+    SuiteSparse::camd
+    SuiteSparse::colamd
+    SuiteSparse::amd
+  )
 endif (SUITESPARSE AND SuiteSparse_FOUND)
 
 if (CXSPARSE AND CXSparse_FOUND)
