hunter: use hunter specific SuiteSparse-config
- when Hunter is enabled link against different targets
  - serguid vs SuiteSparse-metis-for-windows
- for Hunter search with `CONFIG` only and no components, not implemented
- internal: link SuiteSparse-metis-for-windows provided targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -301,11 +301,19 @@ if (SUITESPARSE)
   # By default, if SuiteSparse and all dependencies are found, Ceres is
   # built with SuiteSparse support.
 
+  # Add SuiteSparse hunter package
+  hunter_add_package(SuiteSparse)
+  set(SuiteSparse_NO_CMAKE OFF) # don't install FindSuiteSparse and FindMetis
+
   # Check for SuiteSparse and dependencies.
-  find_package(SuiteSparse 4.5.6 COMPONENTS CHOLMOD SPQR
-    OPTIONAL_COMPONENTS Partition)
+  if (HUNTER_ENABLED)
+    find_package(SuiteSparse CONFIG)
+  else ()
+    find_package(SuiteSparse 4.5.6 COMPONENTS CHOLMOD SPQR
+      OPTIONAL_COMPONENTS Partition)
+  endif()
   if (SuiteSparse_FOUND)
-    set(SuiteSparse_DEPENDENCY "find_dependency(SuiteSparse ${SuiteSparse_VERSION})")
+    set(SuiteSparse_DEPENDENCY "find_dependency(SuiteSparse ${SuiteSparse_VERSION} CONFIG)")
     # By default, if all of SuiteSparse's dependencies are found, Ceres is
     # built with SuiteSparse support.
     message("-- Found SuiteSparse ${SuiteSparse_VERSION}, "
