hunter: prefer CXSparse from SuiteSparse
- if SuiteSparse::cxsparse target is available use it
- extract CXSparse_VERSION from `cs.h`

Change-Id: I11a295ef7519ff94283f667ecfdbb067a7a5a189

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -129,7 +129,12 @@ endif (SUITESPARSE AND SuiteSparse_FOUND)
 if (CXSPARSE AND CXSparse_FOUND)
   # Define version information for use in Solver::FullReport.
   add_definitions(-DCERES_CXSPARSE_VERSION="${CXSparse_VERSION}")
+
+  if (TARGET SuiteSparse::cxsparse)
+    list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES SuiteSparse::cxsparse)
+  else ()
   list(APPEND CERES_LIBRARY_PRIVATE_DEPENDENCIES CXSparse::CXSparse)
+  endif()
 endif (CXSPARSE AND CXSparse_FOUND)
 
 if (ACCELERATESPARSE AND AccelerateSparse_FOUND)
