hunter: internal: unconditionally link against SuiteSparse::metis
Change-Id: I5e95e9e84651832fe093194c56c9b2b4e5a216b6

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -123,6 +123,7 @@ if (SUITESPARSE AND SuiteSparse_FOUND)
     SuiteSparse::camd
     SuiteSparse::colamd
     SuiteSparse::amd
+    SuiteSparse::metis
   )
 endif (SUITESPARSE AND SuiteSparse_FOUND)
 
