hunter: assume with partition when SuiteSparse is built with Hunter
Change-Id: Id411579b91530b4cbc4ea274d023d8ff98146936

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,7 @@ if (SUITESPARSE)
   # Check for SuiteSparse and dependencies.
   if (HUNTER_ENABLED)
     find_package(SuiteSparse CONFIG)
+    set(SuiteSparse_Partition_FOUND ON)
   else ()
     find_package(SuiteSparse 4.5.6 COMPONENTS CHOLMOD SPQR
       OPTIONAL_COMPONENTS Partition)
