hunter: support SuiteSparse-metis v7.5.1-1 without SuiteSparse::metis
Support the latest SuiteSparse-metis-for-windows `v7.5.1-1` release,
which doesn't provide the `SuiteSparse::metis` target anymore, as Metis
is now a private dependency of Cholmod.

Furthermore support finding `SuiteSparse-metis` with the non-Hunter
build, to use local dependencies with `-DSuiteSparse_DIR=...`.

Change-Id: I15dc9611efbd7ec7882773e92f4fa261c69bd669

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,11 +314,17 @@ if (SUITESPARSE)
   hunter_add_package(SuiteSparse)
   set(SuiteSparse_NO_CMAKE OFF) # don't install FindSuiteSparse and FindMetis
 
-  # Check for SuiteSparse and dependencies.
-  if (HUNTER_ENABLED)
-    find_package(SuiteSparse CONFIG)
+  # first try to find SuideSparse-metis config
+  find_package(SuiteSparse CONFIG)
+  if (SuiteSparse_FOUND AND TARGET SuiteSparse::cholmod)
+    set(SuiteSparse_metis ON)
     set(SuiteSparse_Partition_FOUND ON)
   else ()
+    set(SuiteSparse_metis OFF)
+    set(SuiteSparse_FOUND OFF) # try again with COMPONENTS
+  endif ()
+  # Check for SuiteSparse and dependencies.
+  if (NOT SuiteSparse_FOUND)
     find_package(SuiteSparse 4.5.6 COMPONENTS CHOLMOD SPQR
       OPTIONAL_COMPONENTS Partition)
   endif()
